--- a/html/index.html
+++ b/html/index.html
@@ -28,11 +28,16 @@
             ></iframe>
 
             <div class="test">
-                <div class="Earth_sea_image">
-                    <img id="rotateImage" src="../image/Earth&Sea.jpg" alt="Earth and sea image">
-                </div>
             </div>
+
+            <div class="Earth_sea_image">
+                <img id="stillImage" src="../image/Earth&Sea.jpg" alt="Earth and sea image">
+                <img id="rotateImage" src="../image/Earth.png" alt="Earth and sea image">
+            </div>
+
         </div>
+
+        
         
 
     </main>
