advancement on the homepage

--- a/html/index.html
+++ b/html/index.html
@@ -34,12 +34,13 @@
                 <img id="stillImage" src="../image/Earth&Sea.jpg" alt="Earth and sea image">
                 <img id="rotateImage" src="../image/Earth.png" alt="Earth and sea image">
             </div>
-
         </div>
-
         
-        
-
+        <div class="map">
+            <div class="imageWrapper">
+                <img class="mapImage" src="../image/worldMap.png">
+            </div>
+        </div>
     </main>
 
     <footer>
