--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
             allowfullscreen
             ></iframe>
 
-            <div class="test">
+            <div class="layer">
             </div>
 
             <div class="Earth_sea_image">
