--- a/html/Animals_and_Quiz/EarthLife.html
+++ b/html/Animals_and_Quiz/EarthLife.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Everyday life</title>
+    <link rel="stylesheet" href="../../css/Animals_and_Quiz/EarthLife.css">
+    <link class="tabIcon" rel="icon" type="image/x-icon" href="../../image/logo.png">
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <ul class="navList">
+                <img class="navLogoImage" src="../image/logo.png">
+                <li><a class="NavText" href="../html/oe.html">Sea life</a></li>
+                <li><a class="NavText" href="../html/oe.html">Earth life</a></li>
+                <li><a class="NavText" href="../html/index.html">Home</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+
 </body>
+
 </html>
