--- a/html/index.html
+++ b/html/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Everyday life</title>
     <link rel="stylesheet" href="../css/index.css">
-    <link class="tabIcon"rel="icon" type="image/x-icon" href="../image/logo.png">
+    <link class="tabIcon" rel="icon" type="image/x-icon" href="../image/logo.png">
 </head>
+
 <body>
     <header>
         <nav>
@@ -22,10 +24,8 @@
     <main>
         <div class="content">
             <iframe
-            src="https://www.youtube.com/embed/Fx8lFMilCEw?start=71&autoplay=1&mute=1&loop=1&playlist=Fx8lFMilCEw&controls=0&showinfo=0&modestbranding=1&rel=0"
-            allow="autoplay"
-            allowfullscreen
-            ></iframe>
+                src="https://www.youtube.com/embed/Fx8lFMilCEw?start=71&autoplay=1&mute=1&loop=1&playlist=Fx8lFMilCEw&controls=0&showinfo=0&modestbranding=1&rel=0"
+                allow="autoplay" allowfullscreen></iframe>
 
             <div class="layer">
             </div>
@@ -34,8 +34,16 @@
                 <img id="stillImage" src="../image/Earth&Sea.jpg" alt="Earth and sea image">
                 <img id="rotateImage" src="../image/Earth.png" alt="Earth and sea image">
             </div>
+
+            <div class="left-student">
+                <img src="../image/etudiant_bonhomme_baton.png">
+            </div>
+            <div class="right-student">
+                <img src="../image/etudiant_bonhomme_baton.png">
+            </div>
+
         </div>
-        
+
         <div class="map">
             <div class="imageWrapper">
                 <img class="mapImage" src="../image/worldMap.png">
@@ -49,4 +57,5 @@
         <a class="NavText" href="../html/Animals_and_Quiz/EarthLife.html">Earth life</a>
     </footer>
 </body>
+
 </html>
