--- a/html/Animals_and_Quiz/EarthLife.html
+++ b/html/Animals_and_Quiz/EarthLife.html
@@ -14,14 +14,76 @@
         <nav>
             <ul class="navList">
                 <img class="navLogoImage" src="../image/logo.png">
-                <li><a class="NavText" href="../html/oe.html">Sea life</a></li>
-                <li><a class="NavText" href="../html/oe.html">Earth life</a></li>
+                <li><a class="NavText" href="../html/Animals_and_Quiz/SeaLife.html">Sea life</a></li>
+                <li><a class="NavText" href="../html/Animals_and_Quiz/EarthLife.html">Earth life</a></li>
                 <li><a class="NavText" href="../html/index.html">Home</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
+        <h1>Do you undertand Earth life ?</h1>
+        <fieldset class="quiz">
+            <legend>QCM - Earth Life</legend>
+            <ol id="Round1">
+                <li class="questions_style"> What is your CB number ?
+                    <ul class="questions">
+                        <li>
+                            <input type="radio" id="q1_1" name="q1" value="a">
+                            <label for="q1_1" class="btn_radio">Prop1</label>
+                        </li>
+                        <li>
+                            <input type="radio" id="q1_2" name="q1" value="b">
+                            <label for="q1_2" class="btn_radio">Prop2</label>
+                        </li>
+                        <li>
+                            <input type="radio" id="q1_3" name="q1" value="c">
+                            <label for="q1_3" class="btn_radio">Prop3</label>
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="questions_style">What is your home address ?
+                    <ul class="questions">
+                        <li>
+                            <input type="checkbox" id="q2_1" name="q2[]" value="a">
+                            <label for="q2_1" class="btn_checkbox">Prop1</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="q2_2" name="q2[]" value="b">
+                            <label for="q2_2" class="btn_checkbox">Prop2</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="q2_3" name="q2[]" value="c">
+                            <label for="q2_3" class="btn_checkbox">Prop3</label>
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="questions_style">Are you rich ?
+                    <ul class="questions">
+                        <li>
+                            <input type="radio" id="q3_1" name="q3" value="a">
+                            <label for="q3_1" class="btn_radio">Prop1</label>
+                        </li>
+                        <li>
+                            <input type="radio" id="q3_2" name="q3" value="b">
+                            <label for="q3_2" class="btn_radio">Prop2</label>
+                        </li>
+                        <li>
+                            <input type="radio" id="q3_3" name="q3" value="c">
+                            <label for="q3_3" class="btn_radio">Prop3</label>
+                        </li>
+                    </ul>
+                </li>
+            </ol>
+        </fieldset>
+
+        <div>
+            <button id="submit" type="button">Submit</button>
+        </div>
+
+
 
 </body>
 
