--- a/html/index.html
+++ b/html/index.html
@@ -12,8 +12,8 @@
         <nav>
             <ul class="navList">
                 <img class="navLogoImage" src="../image/logo.png">
-                <li><a class="NavText" href="../html/oe.html">Sea life</a></li>
-                <li><a class="NavText" href="../html/oe.html">Earth life</a></li>
+                <li><a class="NavText" href="../html/Animals_and_Quiz/SeaLife.html">Sea life</a></li>
+                <li><a class="NavText" href="../html/Animals_and_Quiz/EarthLife.html">Earth life</a></li>
                 <li><a class="NavText" href="../html/index.html">Home</a></li>
             </ul>
         </nav>
@@ -44,12 +44,10 @@
     </main>
 
     <footer>
-        <nav>
-            <ul class="navList">
-                <li><a class="NavText" href="../html/oe.html">Sea life</a></li>
-                <li><a class="NavText" href="../html/oe.html">Earth life</a></li>
-            </ul>
-        </nav>
+        <p>©️2025 Killian KOULOURATH - Lélia GHEZALI.</p>
+        <p>All rights reserved.</p>
+        <a class="NavText" href="../html/Animals_and_Quiz/SeaLife.html">Sea life</a>
+        <a class="NavText" href="../html/Animals_and_Quiz/EarthLife.html">Earth life</a>
     </footer>
 </body>
 </html>
