some new feat of the homepage

--- a/html/index.html
+++ b/html/index.html
@@ -23,6 +23,9 @@
 
     <main>
         <div class="content">
+
+            <h1 id="HomeTitle">Welcome to everyday life !</h1>
+
             <iframe
                 src="https://www.youtube.com/embed/Fx8lFMilCEw?start=71&autoplay=1&mute=1&loop=1&playlist=Fx8lFMilCEw&controls=0&showinfo=0&modestbranding=1&rel=0"
                 allow="autoplay" allowfullscreen></iframe>
@@ -39,25 +42,16 @@
                 <img src="../image/etudiant_bonhomme_baton.png">
             </div>
             <div class="right-student">
-                <img src="../image/etudiant_bonhomme_baton.png">
+                <img src="../image/etudiant_bonhomme_baton - Copie.png">
             </div>
 
         </div>
 
-        <div class="map">
-            <div class="imageWrapper">
-                <img class="mapImage" src="../image/worldMap.png">
-            </div>
-        </div>
+
     </main>
 
     <footer>
-        <nav>
-            <ul class="navList">
-                <li><a class="NavText" href="../html/oe.html">Sea life</a></li>
-                <li><a class="NavText" href="../html/oe.html">Earth life</a></li>
-            </ul>
-        </nav>
+        oe
     </footer>
 </body>
 
