Begining for Sea Life form + fix of nav and logo

--- a/html/Animals_and_Quiz/EarthLife.html
+++ b/html/Animals_and_Quiz/EarthLife.html
@@ -13,10 +13,10 @@
     <header>
         <nav>
             <ul class="navList">
-                <img class="navLogoImage" src="../image/logo.png">
-                <li><a class="NavText" href="../html/Animals_and_Quiz/SeaLife.html">Sea life</a></li>
-                <li><a class="NavText" href="../html/Animals_and_Quiz/EarthLife.html">Earth life</a></li>
-                <li><a class="NavText" href="../html/index.html">Home</a></li>
+                <img class="navLogoImage" src="../../image/logo.png">
+                <li><a class="NavText" href="../Animals_and_Quiz/SeaLife.html">Sea life</a></li>
+                <li><a class="NavText" href="EarthLife.html">Earth life</a></li>
+                <li><a class="NavText" href="../index.html">Home</a></li>
             </ul>
         </nav>
     </header>
@@ -83,8 +83,15 @@
             <button id="submit" type="button">Submit</button>
         </div>
 
+    </main>
 
 
+    <footer>
+        <p>©️2025 Killian KOULOURATH - Lélia GHEZALI</p>
+        <p>All rights reserved.</p>
+        <a class="NavText" href="../html/Animals_and_Quiz/SeaLife.html">Sea life</a>
+        <a class="NavText" href="../html/Animals_and_Quiz/EarthLife.html">Earth life</a>
+    </footer>
 </body>
 
 </html>
