--- a/html/index.html
+++ b/html/index.html
@@ -45,6 +45,15 @@
                 <img src="../image/etudiant_bonhomme_baton - Copie.png">
             </div>
 
+            <div id="earthModal" class="modal">
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <div class="test">
+                        <img id="worldImage" src="../image/worldMap.png" alt="worldMap">
+                    </div>
+                </div>
+            </div>
+
         </div>
 
 
@@ -53,6 +62,8 @@
     <footer>
         oe
     </footer>
+
+    <script src="../js/index.js" defer></script>
 </body>
 
 </html>
