--- a/html/Animals_and_Quiz/SeaLife.html
+++ b/html/Animals_and_Quiz/SeaLife.html
@@ -87,8 +87,7 @@
 
 
     <footer>
-        <p>©️2025 Killian KOULOURATH - Lélia GHEZALI.</p>
-        <p>All rights reserved.</p>
+        <p>©️2025 Killian KOULOURATH - Lélia GHEZALI</p>
         <a class="NavText" href="../html/Animals_and_Quiz/SeaLife.html">Sea life</a>
         <a class="NavText" href="../html/Animals_and_Quiz/EarthLife.html">Earth life</a>
     </footer>
