--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,6 @@
     <title>Everyday life</title>
     <link rel="stylesheet" href="../css/index.css">
     <link class="tabIcon" rel="icon" type="image/x-icon" href="../image/logo.png">
-    <link class="tabIcon" rel="icon" type="image/x-icon" href="../image/logo.png">
 </head>
 
 
@@ -46,10 +45,15 @@
             </div>
 
             <div class="left-student">
-                <img src="../image/etudiant_bonhomme_baton.png">
+                <a href="../html/about.html">
+                    <img src="../image/etudiant_bonhomme_baton.png"><br>
+                </a>
             </div>
+
             <div class="right-student">
-                <img src="../image/etudiant_bonhomme_baton - Copie.png">
+                <a href="../html/about.html">
+                    <img src="../image/etudiant_bonhomme_baton - Copie.png"><br>
+                </a>
             </div>
 
             <div id="earthModal" class="modal">
@@ -60,11 +64,13 @@
                     </div>
                 </div>
 
-                <div class="left-student">
-                    <img src="../image/etudiant_bonhomme_baton.png">
-                </div>
+                <a href="../html/about.html">
+                    <img src="../image/etudiant_bonhomme_baton.png"><br>
+                </a>
                 <div class="right-student">
-                    <img src="../image/etudiant_bonhomme_baton - Copie.png">
+                    <a href="../html/about.html">
+                        <img src="../image/etudiant_bonhomme_baton - Copie.png"><br>
+                    </a>
                 </div>
 
                 <div id="earthModal" class="modal">
@@ -85,9 +91,18 @@
     </main>
 
     <footer>
-        <p>©️2025 Killian KOULOURATH - Lélia GHEZALI</p>
-        <a href="../html/Animals_and_Quiz/SeaLife.html">Sea life</a>
-        <a href="../html/Animals_and_Quiz/EarthLife.html">Earth life</a>
+        <p>© 2025 Killian KOULOURATH - Lélia GHEZALI</p>
+
+        <div class="footer-center">
+            <a class="NavText" href="index.html">Home</a>
+            <a class="NavText" href="../html/Animals_and_Quiz/SeaLife.html">Sea life</a>
+            <a class="NavText" href="../html/Animals_and_Quiz/EarthLife.html">Earth life</a>
+            <a class="NavText" href="../html/about.html">About</a>
+        </div>
+
+        <div class="footer-bottom-right">
+            <img id="logoEfrei" src="../image/LOGO_EFREI-WEB_blanc.png" alt="Efrei Paris logo">
+        </div>
     </footer>
 
     <script src="../js/index.js" defer></script>
