feat : pin on the map

--- a/html/index.html
+++ b/html/index.html
@@ -61,9 +61,22 @@
             <div id="earthModal" class="modal">
                 <div class="modal-content">
                     <span class="close">&times;</span>
-                    <div class="test">
+                    <div class="image_container">
                         <img id="worldImage" src="../image/worldMap.png" alt="worldMap">
+
+                        <div id="pin_container_1" class="pin_container">
+                            <a href="../html/index.html">
+                                <img id="PinAnimal1" class="pins" src="../image/pinsPNG.png" alt="red pin">
+                            </a>
+                            <div id="info-box-A1" class="pin-info-box">
+                                <img src="../image/Animals/Devils_hole_pupfish.png">
+                            </div>
+                        </div>
+
+
                     </div>
+
+
                 </div>
             </div>
 
