feat pin with hover box for animals

--- a/html/index.html
+++ b/html/index.html
@@ -66,13 +66,39 @@
 
                         <div id="pin_container_1" class="pin_container">
                             <a href="../html/index.html">
-                                <img id="PinAnimal1" class="pins" src="../image/pinsPNG.png" alt="red pin">
+                                <img class="pins" src="../image/pinsPNG.png" alt="red pin">
                             </a>
                             <div id="info-box-A1" class="pin-info-box">
                                 <img src="../image/Animals/Devils_hole_pupfish.png">
                             </div>
                         </div>
 
+                        <div id="pin_container_2" class="pin_container">
+                            <a href="../html/index.html">
+                                <img class="pins" src="../image/pinsPNG.png" alt="red pin">
+                            </a>
+                            <div id="info-box-A2" class="pin-info-box">
+                                <img src="../image/Animals/Dragonet_mandarin.png">
+                            </div>
+                        </div>
+
+                        <div id="pin_container_3" class="pin_container">
+                            <a href="../html/index.html">
+                                <img class="pins" src="../image/pinsPNG.png" alt="red pin">
+                            </a>
+                            <div id="info-box-A3" class="pin-info-box">
+                                <img src="../image/Animals/pandido.jpg">
+                            </div>
+                        </div>
+
+                        <div id="pin_container_4" class="pin_container">
+                            <a href="../html/index.html">
+                                <img class="pins" src="../image/pinsPNG.png" alt="red pin">
+                            </a>
+                            <div id="info-box-A3" class="pin-info-box">
+                                <img src="../image/Animals/Roti-Island-snake-necked-turtle.png">
+                            </div>
+                        </div>
 
                     </div>
 
