--- a/html/Animals_and_Quiz/SeaLife.html
+++ b/html/Animals_and_Quiz/SeaLife.html
@@ -23,62 +23,94 @@
 
     <main>
         <h1>Do you understand Sea life?</h1>
+        <form method="post" name="Quiz" action="#" class="box" id="QuizId" onsubmit="return false">
+            <fieldset id="information">
+                <legend>Your informations</legend>
+                <div>
+                    <label for="name">Name :</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div>
+                    <label for="surname">Surname :</label>
+                    <input type="text" id="surname" name="surname" required>
+                </div>
+                <div>
+                    <label for="birth_date">Birth date:</label>
+                    <input type="date" id="birth_date" name="birth_date" required>
+                </div>
+                <div>
+                    <label for="mail">Mail address:</label>
+                    <input type="email" id="mail" name="mail" required>
+                </div>
+                <div>
+                    <label for="statut">Status :</label>
+                    <select id="status" name="status" required>
+                        <option value="" disabled selected>Select your status</option>
+                        <option value="student">Student</option>
+                        <option value="developer">Developer</option>
+                        <option value="entrepreneur">Entrepreneur</option>
+                    </select>
+                </div>
 
-        <fieldset class="quiz">
-            <legend>QCM - Sea Life</legend>
-            <ol id="Round1">
-                <li class="questions_style">
-                    What is your CB number?
-                    <ul class="questions">
-                        <li><input type="radio" id="q1_1" name="q1" value="a" /><label for="q1_1"
-                                class="btn_radio">Prop1</label></li>
-                        <li><input type="radio" id="q1_2" name="q1" value="b" /><label for="q1_2"
-                                class="btn_radio">Prop2</label></li>
-                        <li><input type="radio" id="q1_3" name="q1" value="c" /><label for="q1_3"
-                                class="btn_radio">Prop3</label></li>
-                    </ul>
-                </li>
+                <input type="button" value="Start quiz" onclick="quizAlert()">
 
-                <li class="questions_style">
-                    What is your home address?
-                    <ul class="questions">
-                        <li><input type="checkbox" id="q2_1" name="q2[]" value="a" /><label for="q2_1"
-                                class="btn_checkbox">Prop1</label></li>
-                        <li><input type="checkbox" id="q2_2" name="q2[]" value="b" /><label for="q2_2"
-                                class="btn_checkbox">Prop2</label></li>
-                        <li><input type="checkbox" id="q2_3" name="q2[]" value="c" /><label for="q2_3"
-                                class="btn_checkbox">Prop3</label></li>
-                    </ul>
-                </li>
+            </fieldset>
 
-                <li class="questions_style">
-                    Are you rich?
-                    <ul class="questions">
-                        <li><input type="radio" id="q3_1" name="q3" value="a" /><label for="q3_1"
-                                class="btn_radio">Prop1</label></li>
-                        <li><input type="radio" id="q3_2" name="q3" value="b" /><label for="q3_2"
-                                class="btn_radio">Prop2</label></li>
-                        <li><input type="radio" id="q3_3" name="q3" value="c" /><label for="q3_3"
-                                class="btn_radio">Prop3</label></li>
-                    </ul>
-                </li>
-            </ol>
-        </fieldset>
+            <fieldset class="quiz">
+                <legend>QCM - Sea Life</legend>
+                <ol id="Round1">
+                    <li class="questions_style">
+                        What is your CB number?
+                        <ul class="questions">
+                            <li><input type="radio" id="q1_1" name="q1" value="a" /><label for="q1_1"
+                                    class="btn_radio">Prop1</label></li>
+                            <li><input type="radio" id="q1_2" name="q1" value="b" /><label for="q1_2"
+                                    class="btn_radio">Prop2</label></li>
+                            <li><input type="radio" id="q1_3" name="q1" value="c" /><label for="q1_3"
+                                    class="btn_radio">Prop3</label></li>
+                        </ul>
+                    </li>
 
-        <div>
-            <input type="button" value="Submit" />
-        </div>
+                    <li class="questions_style">
+                        What is your home address?
+                        <ul class="questions">
+                            <li><input type="checkbox" id="q2_1" name="q2[]" value="a" /><label for="q2_1"
+                                    class="btn_checkbox">Prop1</label></li>
+                            <li><input type="checkbox" id="q2_2" name="q2[]" value="b" /><label for="q2_2"
+                                    class="btn_checkbox">Prop2</label></li>
+                            <li><input type="checkbox" id="q2_3" name="q2[]" value="c" /><label for="q2_3"
+                                    class="btn_checkbox">Prop3</label></li>
+                        </ul>
+                    </li>
 
-        <section id="taquin-game">
-            <h2>Play Taquin!</h2>
-            <label for="imageUpload" class="custom-file-upload">Choose Image</label>
-            <input type="file" id="imageUpload" accept="image/*" />
+                    <li class="questions_style">
+                        Are you rich?
+                        <ul class="questions">
+                            <li><input type="radio" id="q3_1" name="q3" value="a" /><label for="q3_1"
+                                    class="btn_radio">Prop1</label></li>
+                            <li><input type="radio" id="q3_2" name="q3" value="b" /><label for="q3_2"
+                                    class="btn_radio">Prop2</label></li>
+                            <li><input type="radio" id="q3_3" name="q3" value="c" /><label for="q3_3"
+                                    class="btn_radio">Prop3</label></li>
+                        </ul>
+                    </li>
+                </ol>
+            </fieldset>
 
-            <div id="taquin-board"></div>
-            <input type="button" id="shuffle-btn" value="Shuffle" />
-        </section>
+            <div>
+                <input type="button" value="Submit" />
+            </div>
 
-        <div id="win-message">You solved the puzzle!</div>
+            <section id="taquin-game">
+                <h2>Play Taquin!</h2>
+                <label for="imageUpload" class="custom-file-upload">Choose Image</label>
+                <input type="file" id="imageUpload" accept="image/*" />
+
+                <div id="taquin-board"></div>
+                <input type="button" id="shuffle-btn" value="Shuffle" />
+            </section>
+
+            <div id="win-message">You solved the puzzle!</div>
     </main>
 
 
