fixed footer to be adaptive for all screens

--- a/html/Animals_and_Quiz/EarthLife.html
+++ b/html/Animals_and_Quiz/EarthLife.html
@@ -126,14 +126,18 @@
     </main>
 
     <footer>
-        <p>© 2025 Killian KOULOURATH - Lélia GHEZALI</p>
+
+        <div class="footer-left">
+            <p>© 2025 Killian KOULOURATH - Lélia GHEZALI</p>
+        </div>
+        
         <div class="footer-center">
             <a class="NavText" href="../index.html">Home</a>
             <a class="NavText" href="../Animals_and_Quiz/SeaLife.html">Sea life</a>
             <a class="NavText" href="EarthLife.html">Earth life</a>
-            <a class="NavText" href="../html/about.html">About</a>
+            <a class="NavText" href="../about.html">About</a>
         </div>
-        <div class="footer-bottom-right">
+        <div class="footer-right">
             <img id="logoEfrei" src="../../image/LOGO_EFREI-WEB_blanc.png" alt="Efrei Paris logo" />
         </div>
     </footer>
