--- a/html/Animals_and_Quiz/SeaLife.html
+++ b/html/Animals_and_Quiz/SeaLife.html
@@ -104,8 +104,7 @@
                 <h2>Play Taquin!</h2>
 
                 <div id="image-preview-container">
-                    <div class="image-option"
-                        onclick="chooseImage('../../image/Animals/Devils_hole_pupfish.png')">
+                    <div class="image-option" onclick="chooseImage('../../image/Animals/Devils_hole_pupfish.png')">
                         <img src="../../image/Animals/Devils_hole_pupfish.png" alt="Turtle">
                         <div class="image-label">Choose Image 1</div>
                     </div>
@@ -127,7 +126,10 @@
 
 
     <footer>
-        <p>© 2025 Killian KOULOURATH - Lélia GHEZALI</p>
+
+        <div class="footer-left">
+            <p>© 2025 Killian KOULOURATH - Lélia GHEZALI</p>
+        </div>
 
         <div class="footer-center">
             <a class="NavText" href="../index.html">Home</a>
@@ -136,7 +138,7 @@
             <a class="NavText" href="../about.html">About</a>
         </div>
 
-        <div class="footer-bottom-right">
+        <div class="footer-right">
             <img id="logoEfrei" src="../../image/LOGO_EFREI-WEB_blanc.png" alt="Efrei Paris logo">
         </div>
     </footer>
