--- a/html/about.html
+++ b/html/about.html
@@ -69,7 +69,10 @@
 
 
     <footer>
-        <p>© 2025 Killian KOULOURATH - Lélia GHEZALI</p>
+
+        <div class="footer-left">
+            <p>© 2025 Killian KOULOURATH - Lélia GHEZALI</p>
+        </div>
 
         <div class="footer-center">
             <a class="NavText" href="index.html">Home</a>
@@ -79,7 +82,7 @@
 
         </div>
 
-        <div class="footer-bottom-right">
+        <div class="footer-right">
             <img id="logoEfrei" src="../image/LOGO_EFREI-WEB_blanc.png" alt="Efrei Paris logo">
         </div>
     </footer>
