--- a/html/index.html
+++ b/html/index.html
@@ -115,7 +115,9 @@
     </main>
 
     <footer>
-        <p>© 2025 Killian KOULOURATH - Lélia GHEZALI</p>
+        <div class="footer-left">
+            <p>© 2025 Killian KOULOURATH - Lélia GHEZALI</p>
+        </div>
 
         <div class="footer-center">
             <a class="NavText" href="index.html">Home</a>
@@ -124,7 +126,7 @@
             <a class="NavText" href="../html/about.html">About</a>
         </div>
 
-        <div class="footer-bottom-right">
+        <div class="footer-right">
             <img id="logoEfrei" src="../image/LOGO_EFREI-WEB_blanc.png" alt="Efrei Paris logo">
         </div>
     </footer>
