Finished all the pages for the earth animals

--- a/html/index.html
+++ b/html/index.html
@@ -87,7 +87,9 @@
                                 <img class="pins" src="../image/pinsPNG.png" alt="red pin">
                             </a>
                             <div id="info-box-A3" class="pin-info-box">
-                                <img src="../image/Animals/pandido.jpg">
+                                <a href="Animals_and_Quiz/pandido.html">
+                                    <img src="../image/Animals/pandido.jpg"><br>
+                                </a>
                             </div>
                         </div>
 
@@ -95,8 +97,11 @@
                             <a href="../html/index.html">
                                 <img class="pins" src="../image/pinsPNG.png" alt="red pin">
                             </a>
+
                             <div id="info-box-A3" class="pin-info-box">
-                                <img src="../image/Animals/Roti-Island-snake-necked-turtle.png">
+                                <a href="Animals_and_Quiz/turtle.html">
+                                    <img src="../image/Animals/Roti-Island-snake-necked-turtle.png"><br>
+                                </a>
                             </div>
                         </div>
 
