--- a/html/Animals_and_Quiz/EarthLife.html
+++ b/html/Animals_and_Quiz/EarthLife.html
@@ -59,38 +59,38 @@
                 <legend>QCM - Earth Life</legend>
                 <ol id="Round1">
                     <li class="questions_style">
-                        What is your CB number?
+                        How many mature red panda individuals remain in the wild ?
                         <ul class="questions">
                             <li><input type="radio" id="q1_1" name="q1" value="a" /><label for="q1_1"
-                                    class="btn_radio">Prop1</label></li>
+                                    class="btn_radio">10,000</label></li>
                             <li><input type="radio" id="q1_2" name="q1" value="b" /><label for="q1_2"
-                                    class="btn_radio">Prop2</label></li>
+                                    class="btn_radio">1,000</label></li>
                             <li><input type="radio" id="q1_3" name="q1" value="c" /><label for="q1_3"
-                                    class="btn_radio">Prop3</label></li>
+                                    class="btn_radio">5,000</label></li>
                         </ul>
                     </li>
 
                     <li class="questions_style">
-                        What is your home address?
+                        What information in the following is true ?
                         <ul class="questions">
                             <li><input type="checkbox" id="q2_1" name="q2[]" value="a" /><label for="q2_1"
-                                    class="btn_checkbox">Prop1</label></li>
+                                    class="btn_checkbox">The Roti Island Snake-Necked Turtle has a dark brown to black carapace.</label></li>
                             <li><input type="checkbox" id="q2_2" name="q2[]" value="b" /><label for="q2_2"
-                                    class="btn_checkbox">Prop2</label></li>
+                                    class="btn_checkbox">The Roti Island Snake-Necked Turtle is a strong swimmer.</label></li>
                             <li><input type="checkbox" id="q2_3" name="q2[]" value="c" /><label for="q2_3"
-                                    class="btn_checkbox">Prop3</label></li>
+                                    class="btn_checkbox">The Roti Island Snake-Necked Turtle strike preys with lightning speed.</label></li>
                         </ul>
                     </li>
 
                     <li class="questions_style">
-                        Are you rich?
+                        The red panda eats...
                         <ul class="questions">
                             <li><input type="radio" id="q3_1" name="q3" value="a" /><label for="q3_1"
-                                    class="btn_radio">Prop1</label></li>
+                                    class="btn_radio">Fruits.</label></li>
                             <li><input type="radio" id="q3_2" name="q3" value="b" /><label for="q3_2"
-                                    class="btn_radio">Prop2</label></li>
+                                    class="btn_radio">Meats.</label></li>
                             <li><input type="radio" id="q3_3" name="q3" value="c" /><label for="q3_3"
-                                    class="btn_radio">Prop3</label></li>
+                                    class="btn_radio">Only bamboo.</label></li>
                         </ul>
                     </li>
                 </ol>
