creation of the pages for the sealife animals

--- a/html/index.html
+++ b/html/index.html
@@ -62,7 +62,7 @@
                 <div class="modal-content">
                     <span class="close">&times;</span>
                     <div class="image_container">
-                        <img id="worldImage" src="../image/worldMap.png" alt="worldMap">
+                        <img id="worldImage" src="../image/worldMap.png" alt="world Map">
 
                         <div id="pin_container_1" class="pin_container">
                             <a href="../html/index.html">
@@ -74,16 +74,19 @@
                         </div>
 
                         <div id="pin_container_2" class="pin_container">
-                            <a href="../html/index.html">
+                            <a href="../html/Animals_and_Quiz/MandarinFish.html">
                                 <img class="pins" src="../image/pinsPNG.png" alt="red pin">
                             </a>
                             <div id="info-box-A2" class="pin-info-box">
-                                <img src="../image/Animals/Dragonet_mandarin.png">
+                                <a href="../html/Animals_and_Quiz/MandarinFish.html">
+                                    <img src="../image/Animals/Dragonet_mandarin.png">
+                                </a>
+
                             </div>
                         </div>
 
                         <div id="pin_container_3" class="pin_container">
-                            <a href="../html/index.html">
+                            <a href="../html/Animals_and_Quiz/pandido.html">
                                 <img class="pins" src="../image/pinsPNG.png" alt="red pin">
                             </a>
                             <div id="info-box-A3" class="pin-info-box">
