--- a/html/about.html
+++ b/html/about.html
@@ -47,6 +47,7 @@
                 </div>
 
                 <div class="team-card">
+                    <img id="lelia" src="../image/Killian.jpg" alt="Killian KOULOURATH">
                     <h3 id="killian_h3">Killian KOULOURATH</h3>
                     <p><strong>Role:</strong> He also did a lot of things eheh.</p>
                     <p class="bio">I’m a good guy, pouce bleu, oe tkt.</p>
