added the page for the last sea animals and debut of a button to go to top feature

--- a/html/Animals_and_Quiz/DevilsHolePupFish.html
+++ b/html/Animals_and_Quiz/DevilsHolePupFish.html
@@ -27,113 +27,122 @@
 
             <div class="video-container">
                 <video controls width="100%">
-                    <source src="../../videos/Mandarin Dragonet.mp4" type="video/mp4" alt="Red panda video">
+                    <source src="../../videos/Devils hole pupfish.mp4" type="video/mp4" alt="Red panda video">
                 </video>
             </div>
 
             <div class="audio-container">
                 <h2>What sound does the devils hole pupfish make ?</h2>
                 <audio controls>
-                    <source src="../../audios/Mandarin_Dragonet.mp3" type="audio/mpeg" alt="Red panda audio">
+                    <source src="../../audios/devils hole pupfish.mp3" type="audio/mpeg" alt="Red panda audio">
                 </audio>
             </div>
 
             <div class="articles">
                 <div class="article">
-                    <h2>The mandarin fish: A vibrant jewel of the reef</h2>
+                    <h2>The Devils Hole pupfish: A tiny survivor in a fragile world</h2>
                     <p>
-                        The mandarin fish (Synchiropus splendidus) is a small, brightly colored marine species found in
-                        the warm, shallow waters of the Pacific Ocean, particularly in coral reefs of the Philippines,
-                        Indonesia, and Australia. Its dazzling coloration and graceful movement make it one of the most
-                        visually stunning fish in the ocean.<br>
+                        The Devils Hole pupfish (Cyprinodon diabolis) is one of the rarest and most geographically
+                        restricted fish species on Earth. Found only in a single water-filled cavern in the Nevada
+                        desert known as Devils Hole, this tiny fish has become a symbol of resilience and the urgent
+                        need for conservation.<br>
 
                     <ul>
                         <li>Physical appearance:<br>
-                            Mandarin fish are best known for their striking appearance. They display a vivid palette of
-                            electric blues, oranges, and greens arranged in swirling patterns across their small,
-                            elongated bodies, which typically measure only 6 to 8 centimeters (2.4 to 3.1 inches) in
-                            length. Unlike most fish, their coloration comes not from pigments but from cellular
-                            structures that reflect light—a trait shared with few other species.
+                            Measuring less than 2.5 centimeters (1 inch) long, the Devils Hole pupfish is a small,
+                            iridescent-blue fish with a short, stocky body and large eyes. Males display a brighter,
+                            shimmering blue color during the breeding season, while females are generally more subdued
+                            in hue. Despite their modest appearance, their rarity makes them biologically and
+                            scientifically significant.
                         </li><br>
 
-                        <li>Diet and behavior:<br>
-                            These fish are carnivorous and feed on tiny crustaceans and other small invertebrates they
-                            find among rocks and coral. Mandarin fish are slow, deliberate swimmers and rely on their
-                            excellent camouflage to avoid predators. They use their pelvic fins like feet to "walk"
-                            across the seafloor as they forage.
+                        <li>Habitat and behavior:<br>
+                            Devils Hole is a deep, geothermal pool located within a limestone cavern in Death Valley
+                            National Park. With temperatures around 33°C (91°F) and extremely low oxygen levels, the
+                            environment is harsh and unique. The pupfish depend on a shallow rock shelf within the pool
+                            for feeding and spawning, where algae grow and provide their primary food source.
                         </li><br>
 
                         <li>Reproduction and social life:<br>
-                            Mandarin fish are known for their fascinating mating rituals. At dusk, males perform
-                            elaborate courtship displays to attract females. Once a pair forms, they rise together above
-                            the reef to spawn, releasing eggs and sperm into the water in a synchronized dance. Outside
-                            of breeding, mandarin fish are often solitary or found in small groups.
+                            These fish exhibit simple reproductive behaviors, laying their eggs among algae on the
+                            shallow shelf. Because of the limited space and resources, their population naturally
+                            remains small. Devils Hole pupfish have adapted to survive in this extreme environment, with
+                            slower metabolism and a high tolerance for heat and low oxygen.
                         </li><br>
 
                         <li>Conservation status:<br>
-                            Currently, mandarin fish are not listed as endangered, but they face threats from habitat
-                            degradation and overcollection for the aquarium trade. Because of their beauty, they are
-                            highly sought after by hobbyists, which can put local populations at risk if not sourced
-                            responsibly.
+                            The Devils Hole pupfish is listed as Critically Endangered by the IUCN. Their population has
+                            fluctuated dramatically, once dipping below 40 individuals. Threats include groundwater
+                            depletion, human disturbance, and natural fluctuations in water conditions. Intensive
+                            conservation efforts—such as captive breeding, habitat monitoring, and water management—are
+                            ongoing to ensure the species’ survival.
                         </li><br>
                     </ul>
 
 
                     <strong>Conclusion:</strong>
-                    With their vivid colors and delicate beauty, mandarin fish captivate ocean lovers around the world.
-                    Conservation efforts are essential to protect their reef habitats and ensure their survival for
+                    Though small in size, the Devils Hole pupfish plays a big role in the story of conservation.
+                    Protecting this extraordinary species means preserving a one-of-a-kind habitat and reminding
+                    ourselves of the delicate balance between life and environment. With continued research, protection,
+                    and respect for natures boundaries, we can help ensure the Devils Hole pupfish survives for
                     generations to come.
                     </p>
                 </div>
 
                 <div class="article">
-                    <h2>Protecting the mandarin fish: How can we help</h2>
+                    <h2>Protecting the Devils Hole pupfish: How can we help</h2>
                     <p>
-                        Though not yet endangered, the mandarin fish's future depends on our ability to protect coral
-                        reef ecosystems and promote sustainable practices. Here's how we can support their survival:
+                        The Devils Hole pupfish may be one of the most endangered fish species in the world, but with
+                        the right actions, we can contribute to its survival. This remarkable species depends on a
+                        single, fragile habitat—and protecting it requires dedication, awareness, and long-term
+                        commitment.
 
                     <ol>
-                        <li>Protect coral reefs:<br>
-                            Mandarin fish rely on healthy reefs for shelter and food. Coral reefs are under threat from
-                            climate change, pollution, and destructive fishing practices. Supporting marine conservation
-                            areas and organizations that work to restore reef habitats is vital.
+                        <li>Preserve groundwater resources:<br>
+                            The Devils Hole ecosystem is sustained by an underground aquifer. Excessive groundwater
+                            pumping for agriculture or development can lower water levels and threaten the pupfish's
+                            only habitat. Supporting sustainable water use policies and advocating for aquifer
+                            protection helps safeguard their environment.
                         </li><br>
 
                         <li>
-                            Choose sustainable aquariums:<br>
-                            If you keep marine fish, ensure your aquarium only sources mandarin fish from captive
-                            breeding programs or sustainable wild collection practices. Avoid supporting the illegal or
-                            unregulated trade in reef fish.
+                            Support conservation programs:<br>
+                            Federal agencies and research institutions have established monitoring and captive breeding
+                            efforts to prevent extinction. Donating to or volunteering with organizations that focus on
+                            desert ecology or endangered species protection contributes to these vital initiatives.
                         </li><br>
 
                         <li>
-                            Reduce your carbon footprint:<br>
-                            Climate change leads to ocean warming and coral bleaching—both deadly to reef ecosystems.
-                            Reducing your carbon emissions by using energy-efficient products, supporting renewable
-                            energy, and cutting unnecessary travel helps protect marine life.
+                            Respect protected areas:<br>
+                            Devils Hole is part of a federally protected wildlife refuge. Visitors should always follow
+                            park guidelines, respect barriers, and avoid disturbing the area. Even minor disturbances
+                            can have major impacts on this delicate ecosystem.
                         </li><br>
 
                         <li>
-                            Avoid harmful chemicals:<br>
-                            Many sunscreens contain chemicals that can harm coral reefs. Choose reef-safe sunscreen and
-                            avoid dumping pollutants down the drain, which may end up in marine environments.
+                            Educate and inform others:<br>
+                            Raising awareness about the Devils Hole pupfish highlights the broader importance of
+                            biodiversity and habitat conservation. Sharing their story—especially their fight for
+                            survival against the odds—can inspire support for other species at risk.
                         </li><br>
 
                         <li>
-                            Raise awareness:<br>
-                            Mandarin fish can serve as a colorful ambassador for reef conservation. Sharing their story,
-                            especially with younger generations, can help build support for protecting the rich
-                            biodiversity of our oceans.
+                            Promote responsible environmental choices:<br>
+                            Even if you live far from Nevada, your actions can still affect ecosystems like Devils Hole.
+                            Reducing your water use, minimizing pollution, and supporting eco-friendly legislation all
+                            contribute to a healthier planet and more secure habitats for species like the pupfish.
                         </li><br>
                     </ol>
                     <strong>Conclusion:</strong><br>
-                    Protecting the mandarin fish is a shared responsibility. Through marine conservation, sustainable
-                    aquarium practices, and raising awareness about reef preservation, we can all help ensure this
-                    stunning species continues to thrive in our oceans for generations to come.
+                    Saving the Devils Hole pupfish is a shared responsibility. By preserving their habitat, supporting
+                    conservation efforts, and raising awareness, we can all help ensure this resilient little fish
+                    continues to survive in the heart of the desert for generations to come.
                     </p>
                 </div>
             </div>
         </div>
+
+        <button id="backToTopButton">↑</button>
     </main>
 
 
@@ -153,6 +162,8 @@
             <img id="logoEfrei" src="../../image/LOGO_EFREI-WEB_blanc.png" alt="Efrei Paris logo" />
         </div>
     </footer>
+
+    <script src="../js/function.js"></script>
 
 </body>
 
