--- a/html/index.html
+++ b/html/index.html
@@ -65,11 +65,14 @@
                         <img id="worldImage" src="../image/worldMap.png" alt="world Map">
 
                         <div id="pin_container_1" class="pin_container">
-                            <a href="../html/index.html">
+                            <a href="../html/Animals_and_Quiz/DevilsHolePupFish.html">
                                 <img class="pins" src="../image/pinsPNG.png" alt="red pin">
                             </a>
                             <div id="info-box-A1" class="pin-info-box">
-                                <img src="../image/Animals/Devils_hole_pupfish.png">
+                                <a href="../html/Animals_and_Quiz/DevilsHolePupFish.html">
+                                    <img src="../image/Animals/Devils_hole_pupfish.png">
+                                </a>
+
                             </div>
                         </div>
 
@@ -81,7 +84,6 @@
                                 <a href="../html/Animals_and_Quiz/MandarinFish.html">
                                     <img src="../image/Animals/Dragonet_mandarin.png">
                                 </a>
-
                             </div>
                         </div>
 
@@ -141,7 +143,6 @@
 
     <script src="../js/index.js" defer></script>
 
-    <script src="../js/index.js" defer></script>
 </body>
 
 
