--- a/html/index.html
+++ b/html/index.html
@@ -112,6 +112,9 @@
 
                     </div>
 
+                    <h1>Let's explore the world !</h1>
+
+                    <img src="../image/exploration.png" alt="Exploration characters" id="ExplorationImg">
 
                 </div>
             </div>
